# interp

./: .gitignore  CMakeLists.txt  LICENSE  example.cpp  readme.md
src/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  InterpolatorMethod.h  interp.cpp  interp.h
